Added getSyllabus, problem with write text to pdf
